[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/user_interface/fonts/montserrat_eb_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/user_interface/fonts/montserrat_eb_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://menu/join/server_item/server_item.gd" type="Script" id=5]

[node name="server_item" type="MarginContainer"]
margin_right = 540.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 540.0
margin_bottom = 114.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 540.0
margin_bottom = 114.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 540.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 540.0
margin_bottom = 102.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 90.0
rect_min_size = Vector2( 8, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 185.0
margin_bottom = 90.0
mouse_filter = 2

[node name="host_name" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 173.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Name guild"

[node name="player_slot" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 173.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 4 )
text = "Name guild"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 189.0
margin_right = 324.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="join_button" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 328.0
margin_right = 528.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 90 )
size_flags_vertical = 10

[node name="btn" type="TextureButton" parent="VBoxContainer/HBoxContainer/join_button"]
margin_right = 200.0
margin_bottom = 90.0
rect_min_size = Vector2( 100, 50 )
expand = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/join_button"]
margin_right = 200.0
margin_bottom = 90.0
mouse_filter = 2
color = Color( 0, 0.592157, 0.0352941, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/join_button"]
margin_top = 27.0
margin_right = 200.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 2 )
text = "Join"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 532.0
margin_right = 540.0
margin_bottom = 90.0
rect_min_size = Vector2( 8, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 540.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 8 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/join_button/btn" to="." method="_on_btn_pressed"]
